# irgen-rs

./: Cargo.toml  README.md  example.xlsx
src/: args.rs  error.rs  excel.rs  logger.rs  main.rs  parser.rs
src/schema/: attr.rs  base.rs  ipxact.rs  mod.rs  regvue.rs
