[package]
name = "irgen"
version = "0.8.2"
description = "convert register description spreadsheets in a specific format into IP-XACT XML"
authors = ["BeriBeli"]
license = "MIT"
edition = "2024"

[dependencies]
calamine = { version = "0.29.0", features = ["dates"] }
# polars = {version = "0.49.1", features = ["lazy", "strings", "regex", "string_to_integer", "dtype-array", "range", "serde"]}
polars = { version = "0.50.0", features = ["full"] }
serde = {version = "1.0.219", features = ["derive"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
anyhow = "1.0.98"
thiserror = "2.0.12"
serde_json = "1.0.141"
quick-xml ={ version = "0.38.0", features = ["serialize"]}
clap = { version = "4.5.42", features = ["derive"] }
derive_builder = "0.20.2"
regex = "1.11.1"