[package]
name = "irgen"
version = "0.8.2"
description = "convert register description spreadsheets in a specific format into IP-XACT XML"
authors = ["BeriBeli"]
license = "MIT"
edition = "2024"

[dependencies]
calamine = { version = "0.30.0", features = ["dates"] }
polars = {version = "0.50.0", features = ["lazy", "strings", "regex", "string_to_integer", "dtype-array", "range"
    , "serde", "dtype-i128", "timezones"]}
serde = {version = "1.0.219", features = ["derive"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
anyhow = "1.0.98"
thiserror = "2.0.12"
serde_json = "1.0.141"
quick-xml ={ version = "0.38.1", features = ["serialize"]}
clap = { version = "4.5.43", features = ["derive"] }
derive_builder = "0.20.2"
regex = "1.11.1"